2008-07-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/centrality.c (igraph_betweenness_estimate_weighted) : 
	handle the 'vids' argument properly

	* src/centrality.c (igraph_betweenness_estimate_weighted) : 
	added support for cutoff

	* src/centrality.c (igraph_betweenness_estimate) : speedup for 
	cutoff >= 0
	* examples/simple/igraph_betweenness.c : added

	* src/iterators.c (igraph_vs_is_all, igraph_es_is_all) : make argument const

2008-07-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/type_indexededgelist.c (igraph_get_eid) : further speedup	
	
	* src/type_indexededgelist.c (igraph_get_eid) : speeded up by using 
	binary search

	* src/centrality.c (igraph_betweenness, igraph_betweenness_estimate)
	(igraph_betweenness_estimate_weighted) : added weights

2008-07-02  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/src/graphobject.c : added interface to
	igraph_[st_]{vertex,edge}_connectivity
	
2008-06-02  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/igraph.h (igraph_get_shortest_paths_dijkstra) :
	added header
	
	* src/structural_properties.c (igraph_get_shortest_paths_dijkstra) :
	added
	
	* examples/simple/igraph_get_shortest_paths_dijkstra.{c,out} :
	added

	* interfaces/python/src/graphobject.c :
	added weight support for Graph.get_shortest_paths()
	
2008-05-28  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/igraph.h (igraph_shortest_paths_bellman_ford) :
	added missing header

	* interfaces/python/src/graphobject.c :
	modified Graph.shortest_paths to call the Bellman-Ford algorithm
	instead of Dijkstra

2008-05-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/fast_community.c (igraph_community_fastgreedy) :
	check that the graph is simple

2008-05-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-lgl-lexer.l
	* src/foreign-ncol-lexer.l : make these work with any EOL 
	encoding

2008-05-21  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/flow.c (igraph_mincut) : type of `value` should be
	igraph_real_t and not igraph_integer_t
	